# Cmake-build-demo

./: .gitignore  README.md
first/: CMakeLists.txt  cmake-build.sh  hello.cpp  manually-build.sh
second/: CMakeLists.txt  good_morning.cpp  hello.cpp
third/: CMakeLists.txt  cmake-build.sh  manually-build.sh
third/lib/: CMakeLists.txt  good_morning.cpp  hello.cpp
third/test/: CMakeLists.txt
